test/files/neg/plugin-before-parser/testsource.scala
object Test extends Application {
  println("beforeparser")
}

